--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,7 @@ scapy==2.5.0
 python-magic==0.4.27
 psycopg2-binary==2.9.10
 requests==2.32.3
+celery==5.3.4
+redis==5.0.1
+reportlab==4.0.7
+matplotlib==3.8.2
